# ma-rsi-strategy

./: .env  .flake8  Dockerfile  README.md  README.txt  ai_model.py  api_benchmark.py  api_server.py  app.py  app_frontend.py  backtest_curve.csv  backtest_engine.py  backtest_metrics.csv  backtest_metrics.py  backtest_polish.py  backtest_result.csv  backtest_stats.txt  benchmark_runner.py  config.py  daily_scheduler.sh  data_fetcher.py  download_hs300_data.py  download_jqdata.py  generate_test_data.py  index.html  latest_recommendation.json  log_monitor.py  logging_config.py  main.py  merge_price_data.py  mock_ai_server.py  optimize_and_plot.py  package-lock.json  package.json  param_grid_search.csv  param_search.py  pyproject.toml  redis_score_store.py  requirements.txt  risk_benchmark.py  (+7 more)
app_server/: api_server.py  main.py
assets/: index-BwcSpw1h.css  index-_p-WuI9L.js
benchmarks/: api_performance.md  backtest_results.json  backtest_results.md  risk_validation.json  risk_validation.md
config/: risk_config.yaml  trading_config.yaml
data/: 000001.SZ.csv  000333.SZ.csv  000651.SZ.csv  000725.SZ.csv  000858.SZ.csv  002236.SZ.csv  002352.SZ.csv  002415.SZ.csv  002714.SZ.csv  300750.SZ.csv  600000.SH.csv  600030.SH.csv  600031.SH.csv  600036.SH.csv  600048.SH.csv  600104.SH.csv  600309.SH.csv  600438.SH.csv  600519.SH.csv  601318.SH.csv  README.txt  hs300_daily_2023_2025.csv  hs300_daily_2025_01.csv
docs/: api.md  development.md  executive_summary_resume.md  quant_trading_system_design.md
es/: es_client.py
frontend/: Dockerfile  index.html  package-lock.json  (+4 more)
(+53 files in other folders)
