[tool.poetry]
name = "ma_agent_project"
version = "0.1.0"
description = "A quantitative trading project with machine learning capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
lightgbm = "^4.1.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
aiohttp = "^3.9.0"
elasticsearch = "^8.11.0"
tushare = "^1.2.0"
akshare = "^1.10.0"
matplotlib = "^3.8.0"
streamlit = "^1.30.0"
ta = "^0.10.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
flake8 = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=./ --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 